--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,41 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Arial', sans-serif;
     margin: 20px;
-    background-color:rgb(209, 189, 221);
+    text-align: center;
+    background-color: bisque;
+}
+.product{
+    display:grid;
+    grid-template-rows: auto;
+    grid-area: auto;
+}
+.product{
+    display:flex;
+    height: 30%;
+    justify-content: normal;
+    align-items: baseline;
+    background-color: rgb(93, 167, 201);
 }
 .products, .cart {
-    float: left;
+    float: inline-end;
     width: 45%;
     margin: 0 2.5%;
 }
 
 .product, .cart-item {
-    display:grid;
-    grid-direction:normal;
-    display:flex;
-    flex-direction:row;
-    justify-content:space-evenly;
-    border: 1px solid #ccc;
+    border: 5px solid #2ec442;
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 button {
-    background-color: #008CBA;
+    background-color: #af1c83;
     color: #fff;
     border: none;
     padding: 5px 10px;
     cursor: pointer;
 }
 
-
 button:hover {
-    background-color: #096b00;
+    background-color: #d2d42c;
 }
-
